Arrumando os métodos PUT e POST de Receitas